# agents

./: .cspell.json  .gitignore  .mcp.json  .pre-commit-config.yaml  .sqlfluff  AGENTS.md  CLAUDE.md  README.md  biome.json  brewfile  cclint.config.js  justfile  package.json  pyproject.toml  ruff.toml  rumdl.toml  skills-lock.json
.claude/agents/skill-pr-addresser/: .coverage  justfile  pyproject.toml
.claude/agents/skill-pr-addresser/config/: skill-pr-addresser.conf
.claude/agents/skill-pr-addresser/data/: config.json
.claude/agents/skill-pr-addresser/data/sessions/6de157aa/: costs.json  session.json
.claude/agents/skill-pr-addresser/src/: addresser.py  app.py  commit.py  consolidate.py  costs.py  cross_reference.py  discovery.py  dry_run.py  ext_toml.py  feedback.py  filter.py  fix.py  github_pr.py  hashing.py  hooks.py  location_progress.py  locking.py  models.py  pipeline.py  planner.py  progress.py  session_schema.py  templates.py  tracing.py  worktree.py
.claude/agents/skill-pr-addresser/src/tui/: __init__.py
.claude/agents/skill-pr-addresser/subagents/feedback-analyzer/: config.yml
.claude/agents/skill-pr-addresser/subagents/feedback-fixer/: config.yml
.claude/agents/skill-pr-addresser/templates/: iteration_comment.hbs
.claude/agents/skill-pr-addresser/tests/: __init__.py  conftest.py  test_addresser.py  test_costs.py  test_cross_reference.py  test_discovery.py  test_dry_run.py  test_feedback.py  test_filter.py  test_github_pr.py  test_hooks.py  test_location_progress.py  test_locking.py  test_models.py  test_pipeline.py  test_progress.py  test_templates.py  test_tracing.py  test_worktree.py
.claude/agents/skill-reviewer/: justfile  main.py  pyproject.toml
.claude/agents/skill-reviewer/data/: config.json
.claude/agents/skill-reviewer/data/graphql/: get-project-fields.graphql  get-project-items.graphql
.claude/agents/skill-reviewer/src/: __init__.py  config.py  github_ops.py  github_projects.py  graphql.py  headers.py  models.py  orchestrator.py  parse.py  pipeline.py  progress.py  review.py  session.py  templates.py  tokens.py  worktree.py
.claude/agents/skill-reviewer/subagents/complexity-assessor/: config.yml  prompt.md
.claude/agents/skill-reviewer/subagents/fixer/: config.yml
.claude/agents/skill-reviewer/subagents/github-updater/: config.yml  prompt.md
.claude/agents/skill-reviewer/subagents/pr-creator/: config.yml  prompt.md
.claude/agents/skill-reviewer/subagents/validator/: config.yml  prompt.md
.claude/agents/skill-reviewer/templates/: issue-comment-start.hbs
.claude/plans/merge-convert-skills/tools/ir-core/: README.md  __init__.py  base.py  gaps.py  models.py  pyproject.toml  treesitter.py  utils.py  validation.py
.claude/plans/merge-convert-skills/tools/ir-core/ir_core/: __init__.py  base.py  gaps.py  models.py  treesitter.py  utils.py  validation.py
.claude/plans/merge-convert-skills/tools/ir-core/tests/: __init__.py  test_base.py  test_gaps.py  test_models.py  test_treesitter.py  test_validation.py
.claude/plans/merge-convert-skills/tools/ir-extract-rust/: README.md  __init__.py  __main__.py  extractor.py  lifetimes.py  ownership.py  parser.py  pyproject.toml
.claude/plans/merge-convert-skills/tools/ir-extract-rust/ir_extract_rust/: __init__.py  extractor.py  lifetimes.py  ownership.py  parser.py
.claude/plans/merge-convert-skills/tools/ir-extract-rust/tests/: __init__.py  test_ownership.py  test_parser.py
.claude/plans/merge-convert-skills/tools/ir-extract-scala/: README.md  pyproject.toml
.claude/plans/merge-convert-skills/tools/ir-extract-scala/ir_extract_scala/: __init__.py  __main__.py  extractor.py  parser.py
.claude/plans/merge-convert-skills/tools/ir-extract-scala/tests/: __init__.py  test_parser.py
.claude/plans/merge-convert-skills/tools/ir-extract-typescript/: README.md  pyproject.toml
.claude/plans/merge-convert-skills/tools/ir-extract-typescript/ir_extract_typescript/: __init__.py  __main__.py  extractor.py  jsdoc.py  parser.py  types.py
.claude/plans/merge-convert-skills/tools/ir-extract-typescript/tests/: __init__.py  test_jsdoc.py  test_parser.py
.claude/plans/merge-convert-skills/tools/ir-synthesize-roc/: README.md  pyproject.toml
.claude/plans/merge-convert-skills/tools/ir-synthesize-roc/ir_synthesize_roc/: __init__.py  __main__.py  generator.py  synthesizer.py
.claude/plans/merge-convert-skills/tools/ir-synthesize-roc/tests/: __init__.py  test_generator.py
.claude/plans/merge-convert-skills/tools/ir-synthesize-rust/: README.md  __init__.py  formatter.py  generator.py  ownership.py  pyproject.toml  synthesizer.py
.claude/plans/merge-convert-skills/tools/ir-synthesize-rust/ir_synthesize_rust/: __init__.py  __main__.py  formatter.py  generator.py  ownership.py
.claude/plans/merge-convert-skills/tools/ir-synthesize-rust/tests/: __init__.py  test_compilation.py  test_generator.py
.claude/plans/merge-convert-skills/tools/ir-synthesize-scala/: README.md  pyproject.toml
.claude/plans/merge-convert-skills/tools/ir-synthesize-scala/ir_synthesize_scala/: __init__.py  __main__.py  generator.py  synthesizer.py
.claude/plans/merge-convert-skills/tools/ir-synthesize-scala/tests/: __init__.py  test_generator.py
.claude/plans/merge-convert-skills/tools/ir-synthesize-typescript/: README.md  pyproject.toml
.claude/plans/merge-convert-skills/tools/ir-synthesize-typescript/ir_synthesize_typescript/: __init__.py  __main__.py  formatter.py  generator.py  linter.py  synthesizer.py
.claude/plans/merge-convert-skills/tools/ir-synthesize-typescript/tests/: __init__.py  test_compilation.py  test_generator.py  test_linter.py
.claude/plans/merge-convert-skills/tools/ir-validate/: README.md  __init__.py  __main__.py  consistency.py  errors.py  pyproject.toml  references.py  report.py  schema.py  validator.py
.claude/plans/merge-convert-skills/tools/ir-validate/tests/: __init__.py  conftest.py  test_consistency.py  test_errors.py  test_references.py  (+2 more)
content/agents/skill-agents-common/: pyproject.toml
content/agents/skill-agents-common/skill_agents_common/: session.py  worktree.py
(+3667 files in other folders)
