[project]
name = "ai-context-lib"
version = "0.1.0"
description = "Knowledge graph embedding system (SQLite + sqlite-vec)"
requires-python = ">=3.14"
dependencies = [
    "sqlite-vec>=0.1.6",
    "watchdog>=4.0.0",
    "pyyaml>=6.0",
    "ollama>=0.4.0",
]

[project.scripts]
embed = ".scripts.embed:main"

[tool.uv]
python-preference = "only-system"
