[project]
name = "skill-pr-addresser"
version = "0.1.0"
description = "Address PR review feedback for skills, continuing development until approved"
requires-python = ">=3.11"

dependencies = [
    "cement>=3.0.10",
    "colorlog>=6.8.0",
    "textual>=0.47.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.22.0",
    "chevron>=0.14.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",
    "skill-agents-common",
]

[tool.uv.sources]
skill-agents-common = { path = "../skill-agents-common", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
]

[project.scripts]
skill-pr-addresser = "skill_pr_addresser.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["skill_pr_addresser*", "src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
