[project]
name = "skill-reviewer"
version = "0.1.0"
description = "Skill reviewer agent for reviewing and validating skills"
requires-python = ">=3.11"

dependencies = [
    "pyyaml>=6.0",
    "chevron>=0.14.0",
    "skill-agents-common",
]

[tool.uv.sources]
skill-agents-common = { path = "../skill-agents-common", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
