[project]
name = "skill-agents-common"
version = "0.1.0"
description = "Shared library for skill agent tools"
requires-python = ">=3.11"

dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["skill_agents_common*"]
