[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ir-extract-rust"
version = "0.1.0"
description = "Rust source code extractor to IR"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AI Context Library" }]

dependencies = [
    "ir-core",
    "tree-sitter>=0.21.0",
    "tree-sitter-rust>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.2",
]

[project.scripts]
ir-extract-rust = "ir_extract_rust.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["ir_extract_rust"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v"]
