[project]
name = "ir-synthesize-scala"
version = "0.1.0"
description = "Scala source code synthesizer for IR pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "AI Config Library", email = "noreply@example.com" }
]
keywords = [
    "scala",
    "ir",
    "synthesis",
    "code-generation",
    "hkt",
    "higher-kinded-types",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "ir-core>=0.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.2",
]

[project.scripts]
ir-synthesize-scala = "ir_synthesize_scala.__main__:main"

[project.entry-points."ir_synthesizers"]
scala = "ir_synthesize_scala:ScalaSynthesizer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ir_synthesize_scala"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
